 * 2008-??-?? - jos 1.2.1 released
 [http://openid-server.googlecode.com/svn/tags/jos-1.2.1/INSTALL Quick Install Guide]

 Upgrade note:
  * drop table jos_attribute_value;
    drop table jos_attribute;
 New features:
  * Extended attributes modification for persona.
 Bugfixes:
  * Trim email pattern of email address validator for email addition.


 * 2008-09-18 - jos 1.2.0 released
 [http://openid-server.googlecode.com/svn/tags/jos-1.2.0/INSTALL Quick Install Guide]

 New features:
  * Forgot password - generate a single-use password through register-email.
  * Password used times counting, last used date recording.
  * Domain configurator for adding new domain.
  * Add domain settings: inceptionYear, organization.name, orgnaization.url, privacy.url, defaultLocale.
  * Latest sites I logged on.
  * Top sites I logged on.
  * Latest sites of all users.
  * Add i18n-pt(Portuguese).
 Bugfixes and minor changes:
  * Use DecoratorController instead of VelocityDecoratorServlet.
  * Fix getIdentifierPrefix for subdirectory which returns double slashes.
  * Fix HTML validation errors: doctype and accesskey.
  * Add system reserved words, these words can't be registered by user.
  * Move all css, images, js to directory "resources".


 * 2008-09-01 - jos 1.1.0 released
 [http://openid-server.googlecode.com/svn/tags/jos-1.1.0/INSTALL Quick Install Guide]

 Bugfixes and minor changes:
  * Perfect documentation of installation.
  * Fix to avoid to append offset more than once of the links on personas page.
  * Fix dependencies about mail.
  * Some i18n messages in Japanese.
  * Delete some javascript that go out of use.
  * Upgrade springframework from 2.5.4 to 2.5.5.


 * 2008-08-23 - jos 1.1.0-beta released
 [http://openid-server.googlecode.com/svn/tags/jos-1.1.0-beta/INSTALL Quick Install Guide]

 New feature:
  * Multi-domain support.
 Bugfixes and minor changes:
  * Fix exception if denying the RP's authentication request.