@@ -51,7 +51,7 @@
 		<property name="lastUsedDate" not-null="true"
 			column="password_last_used_date" />
 		<property name="maximumServiceTimes" not-null="true"
-			column="password_maximum_service_times" />
+			column="password_max_service_times" />
 		<property name="creationDate" type="timestamp" not-null="true"
 			column="password_creation_date" />
 	</class>
